--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,14 @@
 ---
 layout: default
 ---
+<article class="post">
 
-{% include header.html %}
-<p>page</p>
-{{ content }}
-{% include footer.html %}
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title | escape }}</h1>
+  </header>
+
+  <div class="post-content">
+    {{ content }}
+  </div>
+
+</article>
