use site variables

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="page-footer highlight title">
    <div class="footer-copyright">
       <div class="container">
-         © 2017 <a href="mailto:puzzleduck@gmail.com">PuZZleDucK</a>
-         <a class="grey-text text-lighten-4 right" target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.ORG Source Code</a>
+         © 2017 <a href="mailto:{{ site.copyright_email }}">{{ site.copyright_name }}</a>
+         <a class="grey-text text-lighten-4 right" target="_blank" href="{{ site.source_url }}">Site Source Code</a>
       </div>
    </div>
 </footer>
