--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,23 +10,23 @@
 
     <div class="col card-panel highlight title">
       <ul id="dropDown" class="dropdown-content primary">
-         <li><a target="_blank" href="https://www.linkedin.com/in/puzzleduck">LinkedIn</a></li>
+         <li><a target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username }}">LinkedIn</a></li>
          <li class="divider"></li>
-         <li><a target="_blank" href="https://github.com/PuZZleDucK">GitHub</a></li>
+         <li><a target="_blank" href="https://github.com/{{ site.github_username }}">GitHub</a></li>
          <li class="divider"></li>
-         <li><a target="_blank" href="https://twitter.com/_PuZZleDucK_">Twitter</a></li>
+         <li><a target="_blank" href="https://twitter.com/{{ site.twitter_username }}">Twitter</a></li>
          <li class="divider"></li>
-         <li><a target="_blank" href="https://play.google.com/store/apps/developer?id=PuZZleDucK+Industries.">Android</a></li>
+         <li><a target="_blank" href="https://play.google.com/store/apps/developer?id={{ site.android_username }}">Android</a></li>
       </ul>
       <nav>
          <div class="nav-wrapper primary">
-            <a href="https://puzzleduck.org" class="brand-logo center">PuZZleDucK</a>
+            <a href="{{ site.url }}" class="brand-logo center">{{ site.title }}</a>
             <ul id="nav-mobile" class="right">
                <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
             </ul>
          </div>
       </nav>
-      <h5 class="white-text center">The projects and ponderings of Ben Minerds</h5>
+      <h5 class="white-text center">{{ site.description }}</h5>
     </div>
 
   </div>
