update materalize links to CDN

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js" defer></script>
-    <script type="text/javascript" src="js/materialize.min.js" defer></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js" defer></script>
 
     <div class="col card-panel highlight title">
       <ul id="dropDown" class="dropdown-content primary">
