--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,23 +3,20 @@ layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        {{ page.date | date: date_format }}
-      </time>
-      {% if page.author %}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
-      {% endif %}</p>
-  </header>
+  <div class="row">
+    <div class="col s12 l10 cards-container">
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
+      <div class="card primary z-depth-5">
+        <div class="card-title center">
+          <h5 class="title"><i class="material-icons small">account_balance</i> - {{ page.title | escape }}</h5>
+          <hr />
+        </div>
+        <div class="post-content" itemprop="articleBody">
+          {{ content }}
+        </div>
+      </div>
+    </div>
   </div>
 
-  {% if site.disqus.shortname %}
-    {% include disqus_comments.html %}
-  {% endif %}
+  {% if site.disqus.shortname %} {% include disqus_comments.html %} {% endif %}
 </article>
