--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <article class="post">
+  <h1>pge</h1>
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
