--- a/assets/main.scss
+++ b/assets/main.scss
@@ -125,6 +125,9 @@ img {
 
 
 
+$primary-color:       #332000;
+$highlight-color:       #329A00;
+
 
 /**
  * Code formatting
@@ -134,9 +137,9 @@ img {
 
  $ratio: 0;
 
- $grey-color:       #828282 !default;
- $grey-color-light: lighten($grey-color, 40%) !default;
- $grey-color-dark:  darken($grey-color, 25%) !default;
+ $grey-color:       $primary-color !default;
+ $grey-color-light: lighten($grey-color, 10%) !default;
+ $grey-color-dark:  darken($grey-color, 10%) !default;
 
  @mixin relative-font-size($ratio) {
    font-size: $base-font-size * $ratio;
@@ -145,9 +148,8 @@ img {
 pre,
 code {
   @include relative-font-size(0.9375);
-  border: 1px solid $grey-color-light;
+  border: 3px inset $grey-color-light;
   border-radius: 3px;
-  background-color: #666;
 }
 
 code {
