use more readable fonts

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -28,8 +28,12 @@
   font-family: Kirsty;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: Kirsty;
+}
+
 html {
-  font-family: KirstyRegular;
+  font-family: Ubuntu;
 }
 
 
