standardize all layouts

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,13 @@
 ---
 layout: default
 ---
-<article class="post">
-  <h1>pge</h1>
+<article class="post card-panel highlight">
 
-  <header class="post-header">
+  <header class="post-header card-panel primary">
     <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
 
-  <div class="post-content">
+  <div class="post-content card-panel primary">
     {{ content }}
   </div>
 
