--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,9 @@
 layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-  <h1>post</h1>
 
   <div class="row">
-    <div class="col s12 l10 cards-container">
+    <div class="col s12 l12 cards-container highlight">
 
       <div class="card primary z-depth-5">
         <div class="card-title center">
