--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,11 +19,18 @@ layout: default
             <a class="post-link" href="{{ post.url | relative_url }}">
               <div class="card primary z-depth-5">
                 <div class="card-title center">
-                  <h5 class="title">{{ post.title | escape }}</h5>
+                  <h5 class="title valign-wrapper">
+                    {% if post.title-image %}
+                      <img height="100px" src="/assets/img/{{ post.title-image }}" />
+                    {% else %}
+                      <img height="100px" src="/assets/img/no_image.svg" />
+                    {% endif %}
+                    <p align="center">{{ post.title | escape }}</p>
+                  </h5>
                   <hr />
                 </div>
                 <div class="post-content center" itemprop="articleBody">
-                  <i class="material-icons small">account_balance</i> - {{ post.date | date: date_format }}
+                  <p>{{ post.excerpt }}</p>
                 </div>
               </div>
             </a>
