improve scaled up display of titles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
       </ul>
       <nav>
          <div class="nav-wrapper primary">
-            <a href="{{ site.url }}" class="brand-logo center">{{ site.title }}</a>
+            <a href="{{ site.url }}" class="brand-logo center truncate">{{ site.title }}</a>
             <ul id="nav-mobile" class="right">
                <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
             </ul>
