--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
             {% else %}
               <img class="hide-on-small-only" height="100px" src="/assets/img/no_image.svg" />
             {% endif %}
-            <p text-align="center" align="center" class="center"> {{ page.title | escape }} </p>
+            <p text-align="center" align="center" class="center truncate"> {{ page.title | escape }} </p>
           </h3>
           <hr />
         </div>
