fix inage url in blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
         <div class="card-title center">
           <h3 class="title valign-wrapper">
             {% if page.title-image %}
-              <img class="hide-on-small-only" height="100px" src="/assets/img/{{ page.title-image }}" />
+              <img class="hide-on-small-only" height="100px" src="/assets/img/{{ site.baseurl }}/{{ page.title-image }}" />
             {% else %}
               <img class="hide-on-small-only" height="100px" src="/assets/img/no_image.svg" />
             {% endif %}
